# rust-group-theory

./: Cargo.toml  README.md
src/: examples.rs  lib.rs  macros.rs  traits.rs
src/examples/: finite_uint.rs  integer.rs  rational.rs
src/traits/: field.rs  group.rs  monoid.rs  ring.rs
