[package]
name = "rust-group-theory"
version = "0.1.0"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.9"
rand = "0.8"
num-bigint = "0.3"
num-rational = "0.3"
